# DiCo

./: .gitignore  README.md  common_env.sh  pyproject.toml  requirements-lock.txt
dllm/: DLLM.py  DLLMBaseline.py  DiCo.py  KLASS.py  __init__.py
dllm/recorder/: recorder.py
dllm/tactics/: __init__.py
dllm/tactics/cache_backend/: __init__.py  base.py  dkv.py  fastdllm.py  none.py  registry.py
dllm/tactics/length_strategy/: __init__.py  base.py  daedal.py  registry.py  vanilla.py
dllm/utils/: __init__.py  utils.py
eval/eval_model/: eval_base.py  eval_baseline.py  eval_dico.py  eval_klass.py  utils.py
eval/run/: run_baseline.sh  run_dico.sh  run_dico_abl.sh  run_klass.sh
eval/tasks/math-500/: math-500.yaml
models/LLaDA-8B-Instruct/: modeling_llada.py
